--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chrome Dog</title>
+    <title>Chrome Cat</title>
     <style>
         body, html {
             margin: 0;
@@ -100,8 +100,8 @@
 <body>
     <div class="container">
         <header>
-            <img src="https://i.postimg.cc/cCBn4pSk/Chrome-cat.png" alt="Chrome Dog Logo" class="logo">
-            <h1>Chrome Dog</h1>
+            <img src="https://i.postimg.cc/cCBn4pSk/Chrome-cat.png" alt="Chrome Cat Logo" class="logo">
+            <h1>Chrome Cat</h1>
         </header>
         
         <div class="search-bar">
