--- a/index.html
+++ b/index.html
@@ -3,148 +3,233 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chrome Cat</title>
+    <title>Trump Dog - Presidential Campaign</title>
     <style>
-        body, html {
+        body {
+            font-family: 'Georgia', serif;
             margin: 0;
             padding: 0;
-            font-family: 'Segoe UI', 'Helvetica', 'Arial', sans-serif;
-            background-color: #f1f3f4;
-            color: #202124;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            min-height: 100vh;
+            background-color: #f8f8f8;
+            color: #333;
         }
         .container {
-            max-width: 1200px;
-            width: 100%;
-            padding: 20px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+            max-width: 1000px;
+            margin: 0 auto;
+            padding: 0 20px;
         }
         header {
+            background-color: #002868;
+            color: white;
+            padding: 10px 0;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+        }
+        nav ul {
+            list-style-type: none;
+            padding: 0;
             display: flex;
-            flex-direction: column;
-            align-items: center;
-            margin-bottom: 40px;
-        }
-        .logo {
-            width: 200px;
-            height: 200px;
-            margin-bottom: 20px;
-        }
-        h1 {
-            font-size: 24px;
-            font-weight: normal;
+            justify-content: center;
             margin: 0;
         }
-        .search-bar {
-            background-color: #ffffff;
-            border-radius: 24px;
-            padding: 12px 20px;
-            display: flex;
-            align-items: center;
-            box-shadow: 0 1px 6px 0 rgba(32,33,36,0.28);
-            margin-bottom: 40px;
-            width: 80%;
-            max-width: 600px;
+        nav ul li {
+            margin: 0 15px;
         }
-        .search-bar input {
-            border: none;
-            outline: none;
-            font-size: 16px;
-            width: 100%;
-            margin-left: 10px;
-        }
-        .apps-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-            gap: 20px;
-            justify-content: center;
-            width: 100%;
-            max-width: 600px;
-        }
-        .app {
-            text-align: center;
-            cursor: pointer;
-        }
-        .app-icon {
-            width: 60px;
-            height: 60px;
-            border-radius: 50%;
-            background-color: #ffffff;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin: 0 auto 10px;
-            box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-            overflow: hidden;
-        }
-        .app-icon img {
-            width: 32px;
-            height: 32px;
-            object-fit: contain;
-        }
-        .app-name {
-            font-size: 14px;
-            color: #5f6368;
-        }
-        .app a {
+        nav ul li a {
+            color: white;
             text-decoration: none;
-            color: inherit;
+            font-weight: bold;
+            font-size: 0.9em;
+        }
+        .hero {
+            background-color: #002868;
+            color: white;
+            padding: 60px 0;
+            text-align: center;
+        }
+        .hero h1 {
+            font-size: 2.5em;
+            margin-bottom: 10px;
+        }
+        .hero p {
+            font-size: 1.1em;
+            max-width: 600px;
+            margin: 0 auto;
+        }
+        .section-title {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+        .red-pin {
+            height: 4px;
+            background-color: #bf0a30;
+            width: 80%;
+            margin: 10px auto 30px;
+        }
+        .header-pin {
+            height: 4px;
+            background-color: #bf0a30;
+            width: 100%;
+        }
+        .about, .campaign-promises {
+            padding: 60px 0;
+        }
+        .about img {
+            max-width: 300px;
+            height: auto;
+            display: block;
+            margin: 0 auto 30px;
+            border-radius: 10%;
+        }
+        .campaign-promises ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        .campaign-promises li {
+            margin-bottom: 15px;
+            padding-left: 30px;
+            position: relative;
+        }
+        .campaign-promises li::before {
+            content: "✓";
+            position: absolute;
+            left: 0;
+            color: #002868;
+            font-weight: bold;
+        }
+        footer {
+            background-color: #002868;
+            color: white;
+            text-align: center;
+            padding: 30px 0;
+        }
+        .footer-content {
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+        }
+        .footer-section {
+            margin-bottom: 20px;
+            text-align: left;
+        }
+        .footer-section h3 {
+            margin-bottom: 10px;
+            font-size: 1em;
+        }
+        .footer-section ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        .footer-section ul li {
+            margin-bottom: 5px;
+        }
+        .footer-section ul li a {
+            color: white;
+            text-decoration: none;
+        }
+        .copyright {
+            margin-top: 20px;
+            font-size: 0.8em;
+        }
+        .social-icons {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+        }
+
+        .social-icons a {
+            display: inline-block;
+            margin: 0 5px;
+        }
+
+        .social-icons img {
+            width: 30px;
+            height: 30px;
+            object-fit: contain;
+            transition: transform 0.3s ease;
+        }
+
+        .social-icons img:hover {
+            transform: scale(1.1);
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <header>
-            <img src="https://i.postimg.cc/cCBn4pSk/Chrome-cat.png" alt="Chrome Cat Logo" class="logo">
-            <h1>Chrome Cat</h1>
-        </header>
-        
-        <div class="search-bar">
-            <svg focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
-                <path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z" fill="#5f6368"></path>
-            </svg>
-            <input type="text" placeholder="Search the web">
+    <header>
+        <div class="container">
+            <nav>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#campaign">Campaign</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
         </div>
-        
-        <div class="apps-grid">
-            <div class="app">
-                <a href="https://x.com/Cobratate" target="_blank">
-                    <div class="app-icon">
-                        <img src="https://cdn.cms-twdigitalassets.com/content/dam/about-twitter/x/brand-toolkit/logo-black.png.twimg.2560.png" alt="X (Twitter)">
+    </header>
+    <div class="header-pin"></div>
+
+    <section id="home" class="hero">
+        <div class="container">
+            <h1>Trump Dog for President</h1>
+            <p>A New Breed of Leadership for America</p>
+        </div>
+    </section>
+
+    <section id="about" class="about">
+        <div class="container">
+            <h2 class="section-title">About Trump Dog</h2>
+            <div class="red-pin"></div>
+            <img src="https://i.postimg.cc/sDyrhzV2/TrumpDog.png" alt="Trump Dog">
+            <p>Trump Dog is a visionary leader with a proven track record in loyalty, protection, and unwavering dedication. With years of experience in community engagement and conflict resolution, Trump Dog is uniquely qualified to lead our nation towards a brighter future.</p>
+        </div>
+    </section>
+
+    <section id="campaign" class="campaign-promises">
+        <div class="container">
+            <h2 class="section-title">Campaign Platform</h2>
+            <div class="red-pin"></div>
+            <ul>
+                <li>Strengthen national security and border protection</li>
+                <li>Implement comprehensive healthcare reform</li>
+                <li>Boost economic growth and job creation</li>
+                <li>Improve education and workforce development</li>
+            </ul>
+        </div>
+    </section>
+
+    <div class="header-pin"></div>
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h3>Contact Us</h3>
+                    <p>Email: info@trumpdog2024.com</p>
+                    <p>Phone: (555) 123-4567</p>
+                </div>
+                <div class="footer-section">
+                    <h3>Quick Links</h3>
+                    <ul>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#campaign">Campaign</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h3>Follow Us</h3>
+                    <div class="social-icons">
+                        <a href="https://x.com/Cobratate" target="_blank"><img src="https://cdn.cms-twdigitalassets.com/content/dam/about-twitter/x/brand-toolkit/logo-black.png.twimg.2560.png" alt="X (Twitter)" /></a>
+                        <a href="https://t.me/TrumpDogOnSol" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Telegram_2019_Logo.svg/182px-Telegram_2019_Logo.svg.png" alt="Telegram" /></a>
+                        <a href="#" target="_blank"><img src="https://cdn.prod.website-files.com/6421d264d066fd2b24b91b20/661375b92a7e161501f4b5e5_dexscreener.322a5a2d.png" alt="DexScreener" /></a>
+                        <a href="#" target="_blank"><img src="https://pump.fun/icon.png?c2a22dd8671140c9" alt="Pump" /></a>
                     </div>
-                    <div class="app-name">X (Twitter)</div>
-                </a>
+                </div>
             </div>
-            <div class="app">
-                <a href="https://t.me/ChromeCatOnSol" target="_blank">
-                    <div class="app-icon">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Telegram_2019_Logo.svg/182px-Telegram_2019_Logo.svg.png" alt="Telegram">
-                    </div>
-                    <div class="app-name">Telegram</div>
-                </a>
-            </div>
-            <div class="app">
-                <a href="https://dexscreener.com" target="_blank">
-                    <div class="app-icon">
-                        <img src="https://cdn.prod.website-files.com/6421d264d066fd2b24b91b20/661375b92a7e161501f4b5e5_dexscreener.322a5a2d.png" alt="DexScreener">
-                    </div>
-                    <div class="app-name">DexScreener</div>
-                </a>
-            </div>
-            <div class="app">
-                <a href="https://pump.fun" target="_blank">
-                    <div class="app-icon">
-                        <img src="https://pump.fun/icon.png?c2a22dd8671140c9" alt="Pump.fun">
-                    </div>
-                    <div class="app-name">Pump.fun</div>
-                </a>
+            <div class="copyright">
+                <p>&copy; 2024 Trump Dog Presidential Campaign. All rights reserved.</p>
             </div>
         </div>
-    </div>
+    </footer>
 </body>
 </html>
