--- a/index.html
+++ b/index.html
@@ -3,233 +3,108 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trump Dog - Presidential Campaign</title>
+    <title>Tomy Sholby - Peaky Blinders</title>
     <style>
         body {
-            font-family: 'Georgia', serif;
+            font-family: 'Times New Roman', serif;
             margin: 0;
             padding: 0;
-            background-color: #f8f8f8;
-            color: #333;
-        }
-        .container {
-            max-width: 1000px;
-            margin: 0 auto;
-            padding: 0 20px;
+            background-color: #1a1a1a;
+            color: #d4af37;
         }
         header {
-            background-color: #002868;
-            color: white;
-            padding: 10px 0;
-            position: sticky;
-            top: 0;
-            z-index: 1000;
+            background-color: #2c2c2c;
+            padding: 20px;
+            text-align: center;
+            border-bottom: 2px solid #d4af37;
         }
-        nav ul {
-            list-style-type: none;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            margin: 0;
-        }
-        nav ul li {
-            margin: 0 15px;
-        }
-        nav ul li a {
-            color: white;
+        nav a {
+            color: #d4af37;
             text-decoration: none;
-            font-weight: bold;
-            font-size: 0.9em;
+            margin: 0 10px;
         }
-        .hero {
-            background-color: #002868;
-            color: white;
-            padding: 60px 0;
-            text-align: center;
-        }
-        .hero h1 {
-            font-size: 2.5em;
-            margin-bottom: 10px;
-        }
-        .hero p {
-            font-size: 1.1em;
-            max-width: 600px;
+        main {
+            max-width: 800px;
             margin: 0 auto;
-        }
-        .section-title {
-            text-align: center;
-            margin-bottom: 30px;
-        }
-        .red-pin {
-            height: 4px;
-            background-color: #bf0a30;
-            width: 80%;
-            margin: 10px auto 30px;
-        }
-        .header-pin {
-            height: 4px;
-            background-color: #bf0a30;
-            width: 100%;
-        }
-        .about, .campaign-promises {
-            padding: 60px 0;
-        }
-        .about img {
-            max-width: 300px;
-            height: auto;
-            display: block;
-            margin: 0 auto 30px;
-            border-radius: 10%;
-        }
-        .campaign-promises ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        .campaign-promises li {
-            margin-bottom: 15px;
-            padding-left: 30px;
-            position: relative;
-        }
-        .campaign-promises li::before {
-            content: "✓";
-            position: absolute;
-            left: 0;
-            color: #002868;
-            font-weight: bold;
+            padding: 20px;
         }
         footer {
-            background-color: #002868;
-            color: white;
+            background-color: #2c2c2c;
+            padding: 20px;
             text-align: center;
-            padding: 30px 0;
+            border-top: 2px solid #d4af37;
         }
-        .footer-content {
+        img {
+            max-width: 100%;
+            height: auto;
+        }
+        .social-links {
             display: flex;
-            justify-content: space-between;
-            flex-wrap: wrap;
-        }
-        .footer-section {
-            margin-bottom: 20px;
-            text-align: left;
-        }
-        .footer-section h3 {
-            margin-bottom: 10px;
-            font-size: 1em;
-        }
-        .footer-section ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        .footer-section ul li {
-            margin-bottom: 5px;
-        }
-        .footer-section ul li a {
-            color: white;
-            text-decoration: none;
-        }
-        .copyright {
+            justify-content: center;
+            gap: 20px;
             margin-top: 20px;
-            font-size: 0.8em;
         }
-        .social-icons {
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-        }
-
-        .social-icons a {
-            display: inline-block;
-            margin: 0 5px;
-        }
-
-        .social-icons img {
-            width: 30px;
-            height: 30px;
-            object-fit: contain;
+        .social-links img {
+            width: 40px;
+            height: 40px;
             transition: transform 0.3s ease;
         }
-
-        .social-icons img:hover {
+        .social-links img:hover {
             transform: scale(1.1);
+        }
+        .quote {
+            font-style: italic;
+            text-align: center;
+            margin: 20px 0;
         }
     </style>
 </head>
 <body>
     <header>
-        <div class="container">
-            <nav>
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#campaign">Campaign</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
+        <h1>Tomy Sholby</h1>
+        <nav>
+            <a href="#about">About</a> |
+            <a href="#gallery">Gallery</a> |
+            <a href="#about-us">About Us</a> |
+            <a href="#contact">Contact</a>
+        </nav>
     </header>
-    <div class="header-pin"></div>
 
-    <section id="home" class="hero">
-        <div class="container">
-            <h1>Trump Dog for President</h1>
-            <p>A New Breed of Leadership for America</p>
+    <main>
+        <section id="about">
+            <h2>About Tomy Sholby</h2>
+            <img src="https://i.postimg.cc/L4v0bw2T/Tamy-Sholby-pfp-removebg-preview.png" alt="Tomy Sholby">
+            <p>Tomy Sholby, inspired by the iconic character Tommy Shelby from Peaky Blinders, is a symbol of cunning leadership and strategic brilliance. With a sharp mind and even sharper style, Tomy embodies the spirit of the roaring 1920s Birmingham underworld.</p>
+            <div class="quote">"Intelligence is a very valuable thing, innit, my friend? And usually it comes far too late." - Tomy Sholby</div>
+        </section>
+
+        <section id="gallery">
+            <h2>Gallery</h2>
+            <p>Coming soon: A collection of Tomy Sholby's most memorable moments, featuring iconic scenes from the streets of Small Heath to the halls of power.</p>
+        </section>
+
+        <section id="about-us">
+            <h2>About Us</h2>
+            <p>We are the Peaky Blinders, a formidable gang from Birmingham, England. Named for our practice of sewing razor blades into the peaks of our caps, we've risen from the back alleys of Small Heath to become a force to be reckoned with in the criminal underworld and beyond.</p>
+            <p>Under the leadership of Tomy Sholby, we've expanded our interests from illegal betting and protection rackets to legitimate businesses and political influence. Our story is one of ambition, family loyalty, and the relentless pursuit of power in a world that's changing faster than most can keep up with.</p>
+        </section>
+
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>For business inquiries, alliance proposals, or to arrange a meeting with Mr. Sholby, please reach out through our secure channels below. Remember, discretion is paramount in our line of work.</p>
+        </section>
+
+        <div class="social-links">
+            <a href="https://twitter.com/TomySholby" target="_blank"><img src="https://cdn.cms-twdigitalassets.com/content/dam/about-twitter/x/brand-toolkit/logo-black.png.twimg.2560.png" alt="X (Twitter)"></a>
+            <a href="https://t.me/TomySholbyOnSol" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Telegram_2019_Logo.svg/182px-Telegram_2019_Logo.svg.png" alt="Telegram"></a>
+            <a href="https://dexscreener.com/TomySholby" target="_blank"><img src="https://cdn.prod.website-files.com/6421d264d066fd2b24b91b20/661375b92a7e161501f4b5e5_dexscreener.322a5a2d.png" alt="DexScreener"></a>
+            <a href="https://pump.fun/TomySholby" target="_blank"><img src="https://pump.fun/icon.png?c2a22dd8671140c9" alt="Pump Fun"></a>
         </div>
-    </section>
+    </main>
 
-    <section id="about" class="about">
-        <div class="container">
-            <h2 class="section-title">About Trump Dog</h2>
-            <div class="red-pin"></div>
-            <img src="https://i.postimg.cc/sDyrhzV2/TrumpDog.png" alt="Trump Dog">
-            <p>Trump Dog is a visionary leader with a proven track record in loyalty, protection, and unwavering dedication. With years of experience in community engagement and conflict resolution, Trump Dog is uniquely qualified to lead our nation towards a brighter future.</p>
-        </div>
-    </section>
-
-    <section id="campaign" class="campaign-promises">
-        <div class="container">
-            <h2 class="section-title">Campaign Platform</h2>
-            <div class="red-pin"></div>
-            <ul>
-                <li>Strengthen national security and border protection</li>
-                <li>Implement comprehensive healthcare reform</li>
-                <li>Boost economic growth and job creation</li>
-                <li>Improve education and workforce development</li>
-            </ul>
-        </div>
-    </section>
-
-    <div class="header-pin"></div>
     <footer>
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-section">
-                    <h3>Contact Us</h3>
-                    <p>Email: info@trumpdog2024.com</p>
-                    <p>Phone: (555) 123-4567</p>
-                </div>
-                <div class="footer-section">
-                    <h3>Quick Links</h3>
-                    <ul>
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#campaign">Campaign</a></li>
-                        <li><a href="#contact">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
-                    <h3>Follow Us</h3>
-                    <div class="social-icons">
-                        <a href="https://x.com/Cobratate" target="_blank"><img src="https://cdn.cms-twdigitalassets.com/content/dam/about-twitter/x/brand-toolkit/logo-black.png.twimg.2560.png" alt="X (Twitter)" /></a>
-                        <a href="https://t.me/TrumpDogOnSol" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Telegram_2019_Logo.svg/182px-Telegram_2019_Logo.svg.png" alt="Telegram" /></a>
-                        <a href="#" target="_blank"><img src="https://cdn.prod.website-files.com/6421d264d066fd2b24b91b20/661375b92a7e161501f4b5e5_dexscreener.322a5a2d.png" alt="DexScreener" /></a>
-                        <a href="#" target="_blank"><img src="https://pump.fun/icon.png?c2a22dd8671140c9" alt="Pump" /></a>
-                    </div>
-                </div>
-            </div>
-            <div class="copyright">
-                <p>&copy; 2024 Trump Dog Presidential Campaign. All rights reserved.</p>
-            </div>
-        </div>
+        <p>&copy; 2024 Tomy Sholby. All rights reserved.</p>
+        <p>"By order of the Peaky Blinders"</p>
     </footer>
 </body>
 </html>
