--- a/index.html
+++ b/index.html
@@ -3,108 +3,151 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tomy Sholby - Peaky Blinders</title>
+    <title>Apple Cat</title>
     <style>
         body {
-            font-family: 'Times New Roman', serif;
+            font-family: 'Helvetica Neue', Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #1a1a1a;
-            color: #d4af37;
+            background-color: #f2f2f2;
+            color: #333;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
         }
         header {
-            background-color: #2c2c2c;
-            padding: 20px;
+            background-color: #1d1d1f;
+            color: white;
             text-align: center;
-            border-bottom: 2px solid #d4af37;
+            padding: 1rem;
         }
-        nav a {
-            color: #d4af37;
+        nav {
+            background-color: #444;
+            padding: 0.5rem;
+        }
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+        }
+        nav ul li {
+            margin: 0 1rem;
+        }
+        nav ul li a {
+            color: white;
             text-decoration: none;
-            margin: 0 10px;
         }
         main {
             max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
+            margin: 2rem auto;
+            padding: 0 1rem;
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            flex-grow: 1;
         }
-        footer {
-            background-color: #2c2c2c;
-            padding: 20px;
+        .hero {
             text-align: center;
-            border-top: 2px solid #d4af37;
+            padding: 2rem 0;
         }
-        img {
+        .hero img {
+            max-width: 300px;
+            border-radius: 50%;
+            border: 5px solid #007aff;
+        }
+        .apple-image {
+            text-align: center;
+            margin: 2rem 0;
+        }
+        .apple-image img {
             max-width: 100%;
             height: auto;
+            border-radius: 10px;
+        }
+        .features {
+            display: flex;
+            justify-content: space-around;
+            margin-top: 2rem;
+        }
+        .feature {
+            text-align: center;
+            padding: 1rem;
+        }
+        footer {
+            background-color: #1d1d1f;
+            color: white;
+            text-align: center;
+            padding: 1rem;
+            margin-top: auto;
         }
         .social-links {
             display: flex;
             justify-content: center;
-            gap: 20px;
-            margin-top: 20px;
+            margin-top: 1rem;
+        }
+        .social-links a {
+            margin: 0 0.5rem;
         }
         .social-links img {
-            width: 40px;
-            height: 40px;
-            transition: transform 0.3s ease;
-        }
-        .social-links img:hover {
-            transform: scale(1.1);
-        }
-        .quote {
-            font-style: italic;
-            text-align: center;
-            margin: 20px 0;
+            width: 30px;
+            height: 30px;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Tomy Sholby</h1>
-        <nav>
-            <a href="#about">About</a> |
-            <a href="#gallery">Gallery</a> |
-            <a href="#about-us">About Us</a> |
-            <a href="#contact">Contact</a>
-        </nav>
+        <h1>Apple Cat</h1>
     </header>
-
+    <nav>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#features">Features</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
     <main>
-        <section id="about">
-            <h2>About Tomy Sholby</h2>
-            <img src="https://i.postimg.cc/L4v0bw2T/Tamy-Sholby-pfp-removebg-preview.png" alt="Tomy Sholby">
-            <p>Tomy Sholby, inspired by the iconic character Tommy Shelby from Peaky Blinders, is a symbol of cunning leadership and strategic brilliance. With a sharp mind and even sharper style, Tomy embodies the spirit of the roaring 1920s Birmingham underworld.</p>
-            <div class="quote">"Intelligence is a very valuable thing, innit, my friend? And usually it comes far too late." - Tomy Sholby</div>
+        <section id="home" class="hero">
+            <img src="https://i.postimg.cc/G3Gq0pGd/apple-cat-pfp.png" alt="Apple Cat">
+            <h2>Welcome to Apple Cat</h2>
+            <p>Discover the purr-fect blend of technology and feline charm!</p>
         </section>
-
-        <section id="gallery">
-            <h2>Gallery</h2>
-            <p>Coming soon: A collection of Tomy Sholby's most memorable moments, featuring iconic scenes from the streets of Small Heath to the halls of power.</p>
-        </section>
-
-        <section id="about-us">
-            <h2>About Us</h2>
-            <p>We are the Peaky Blinders, a formidable gang from Birmingham, England. Named for our practice of sewing razor blades into the peaks of our caps, we've risen from the back alleys of Small Heath to become a force to be reckoned with in the criminal underworld and beyond.</p>
-            <p>Under the leadership of Tomy Sholby, we've expanded our interests from illegal betting and protection rackets to legitimate businesses and political influence. Our story is one of ambition, family loyalty, and the relentless pursuit of power in a world that's changing faster than most can keep up with.</p>
-        </section>
-
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>For business inquiries, alliance proposals, or to arrange a meeting with Mr. Sholby, please reach out through our secure channels below. Remember, discretion is paramount in our line of work.</p>
-        </section>
-
-        <div class="social-links">
-            <a href="https://twitter.com/TomySholby" target="_blank"><img src="https://cdn.cms-twdigitalassets.com/content/dam/about-twitter/x/brand-toolkit/logo-black.png.twimg.2560.png" alt="X (Twitter)"></a>
-            <a href="https://t.me/TomySholbyOnSol" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Telegram_2019_Logo.svg/182px-Telegram_2019_Logo.svg.png" alt="Telegram"></a>
-            <a href="https://dexscreener.com/TomySholby" target="_blank"><img src="https://cdn.prod.website-files.com/6421d264d066fd2b24b91b20/661375b92a7e161501f4b5e5_dexscreener.322a5a2d.png" alt="DexScreener"></a>
-            <a href="https://pump.fun/TomySholby" target="_blank"><img src="https://pump.fun/icon.png?c2a22dd8671140c9" alt="Pump Fun"></a>
+        <div class="apple-image">
+            <img src="https://images.unsplash.com/photo-1560806887-1e4cd0b6cbd6" alt="Red Apple">
         </div>
+        <section id="about">
+            <h2>About Us</h2>
+            <p>Apple Cat combines the sleek design of Apple products with the adorable nature of cats. We're here to bring joy and innovation to your digital life!</p>
+        </section>
+        <section id="features" class="features">
+            <div class="feature">
+                <h3>Meow-sic</h3>
+                <p>Listen to cat-themed tunes</p>
+            </div>
+            <div class="feature">
+                <h3>Paw-tos</h3>
+                <p>Capture purr-fect moments</p>
+            </div>
+            <div class="feature">
+                <h3>Scratch Pad</h3>
+                <p>Take notes with a feline touch</p>
+            </div>
+        </section>
+        <section id="contact">
+            <h2>Contact Us</h2>
+            <p>Have questions? Reach out to us at meow@applecat.com</p>
+        </section>
     </main>
-
     <footer>
-        <p>&copy; 2024 Tomy Sholby. All rights reserved.</p>
-        <p>"By order of the Peaky Blinders"</p>
+        <p>&copy; 2023 Apple Cat. All rights reserved.</p>
+        <div class="social-links">
+            <a href="https://twitter.com" target="_blank"><img src="https://cdn.cms-twdigitalassets.com/content/dam/about-twitter/x/brand-toolkit/logo-black.png.twimg.2560.png" alt="Twitter"></a>
+            <a href="https://telegram.org" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Telegram_2019_Logo.svg/182px-Telegram_2019_Logo.svg.png" alt="Telegram"></a>
+            <a href="https://dexscreener.com" target="_blank"><img src="https://cdn.prod.website-files.com/6421d264d066fd2b24b91b20/661375b92a7e161501f4b5e5_dexscreener.322a5a2d.png" alt="DexScreener"></a>
+            <a href="https://pump.fun" target="_blank"><img src="https://pump.fun/icon.png?c2a22dd8671140c9" alt="Pump"></a>
+        </div>
     </footer>
 </body>
 </html>
